--- a/app.html
+++ b/app.html
@@ -44,7 +44,10 @@
     <main class="projPage">
         <h2 class="projTitle">market app</h2>
 
-        <img src="images/app.png" alt="ui/ux" class="infoPic">
+        <a href="https://www.figma.com/proto/jQQAgf53PlvKL5LrxviUx5/P2-Deliverable5?node-id=68%3A35&scaling=scale-down&page-id=68%3A34&starting-point-node-id=68%3A35" target="_blank" rel="noopener noreferrer">
+            <img src="images/app.png" alt="ui/ux" class="infoPic">
+        </a>
+
 
         <div class="projDiv">
             <p class="desc">This project was made in a UI/UX class, with the goal of making finding affordable food more accessible and convenient. Drawing off my own experience as a college student who looks for affordable food, I thought that having one place to compare the price of an item from multiple places would be a new idea. If I wanted to find the cheapest place to obtain a product, I'd have to search on the separate sites, or in the stores themselves.</p>
