--- a/graphic.html
+++ b/graphic.html
@@ -60,7 +60,7 @@
         <section class="proj">
             <a href="mogra.html">
                 <img src="images/farm.png" alt="farming vid" class="imgs">
-                <p class="imgTitle">factory farming</p>
+                <p class="imgTitle">factory farming video</p>
             </a>
         </section>
 
