--- a/gs.html
+++ b/gs.html
@@ -44,7 +44,10 @@
     <main class="projPage">
         <h2 class="projTitle">graphic standard</h2>
 
-        <img src="images/graphic.png" alt="graphicStandard" class="infoPic">
+        <a href="https://issuu.com/emmamchoi/docs/graphicstandard" target="_blank" rel="noopener noreferrer">
+            <img src="images/graphic.png" alt="graphicStandard" class="infoPic">
+        </a>
+        
 
         <div class="projDiv">
             <p class="desc">This project, done over the course of a graphic design class, focused on designing the graphic elements for a theoretical brand. We were tasked with creating a brand for some insect-based food product, and the respective imagery/branding associated with it. Throughout the quarter we had class and instructor discussion sessions where we worked to take in feedback and improve our designs. <a href="https://issuu.com/emmamchoi/docs/graphicstandard" class="pageLink">Here</a> is the culmination of my project.</p>
