--- a/mogra.html
+++ b/mogra.html
@@ -42,9 +42,12 @@
     </header>
 
     <main class="projPage">
-        <h2 class="projTitle">factory farming</h2>
+        <h2 class="projTitle">factory farming video</h2>
 
-        <img src="images/farm.png" alt="farm vid" class="infoPic">
+        <a href="https://filmfreeway.com/projects/2150956" target="_blank" rel="noopener noreferrer">
+            <img src="images/farm.png" alt="farm vid" class="infoPic">
+
+        </a>
 
         <div class="projDiv">
             <p class="desc">I created <a href="https://filmfreeway.com/projects/2150956" class="pageLink">this video</a> for a motion graphics class, on the topic of the environmental impact of factory farming. Inspired by some previous research I'd done, I thought this topic could be interesting to explore, both informationally and graphically.</p>
