--- a/tea.html
+++ b/tea.html
@@ -44,7 +44,10 @@
     <main class="projPage">
         <h2 class="projTitle">interactive site</h2>
 
-        <img src="images/teaSite.png" alt="tea" class="infoPic">
+        <a href="https://emmamchoi.github.io/des157/" target="_blank" rel="noopener noreferrer">
+            <img src="images/teaSite.png" alt="tea" class="infoPic">
+        </a>
+        
 
         <div class="projDiv">
             <p class="desc">This project was done as the final project in an interactive media class. Utilizing my passion for tea, I made this as an interactive list/display of the tea places I frequent near home. <a href="https://emmamchoi.github.io/des157/" class="pageLink">Here</a> is the home page of that quater, with the final project being found under "Final/Final Project". Attributes of the site include pictures and illustrations I made myself, done/edited in Adobe Photoshop.</p>
