--- a/trash.html
+++ b/trash.html
@@ -44,7 +44,10 @@
     <main class="projPage">
         <h2 class="projTitle">trash</h2>
 
-        <img src="images/trash.png" alt="trash game" class="infoPic">
+        <a href="https://openprocessing.org/sketch/856006" target="_blank" rel="noopener noreferrer">
+             <img src="images/trash.png" alt="trash game" class="infoPic">
+        </a>
+       
 
         <div class="projDiv">
             <p class="desc">I made <a href="https://openprocessing.org/sketch/856006" class="pageLink">this game</a> in a "coding for designers" class. The class was primarily focused on learning how to code, particularly in Processing. This final project is the culmination of what we learned in class, while providing some message of our choosing. My game, "Trash," focused on, well, trash, but more specifically, the effect of waste on the environment.</p>
