--- a/typeFin.html
+++ b/typeFin.html
@@ -44,7 +44,10 @@
     <main class="projPage">
         <h2 class="projTitle">covid journal</h2>
 
-        <img src="images/covid.png" alt="covid journal" class="infoPic">
+        <a href="https://issuu.com/emmchoi/docs/proj3_final" target="_blank" rel="noopener noreferrer">
+            <img src="images/covid.png" alt="covid journal" class="infoPic">
+        </a>
+        
 
         <div class="projDiv">
             <p class="desc">This <a href="https://issuu.com/emmchoi/docs/proj3_final" class="pageLink">project</a> was my final work for a typography class I took, representing my routine under COVID-19 times. The visual theme of this booklet was relatively simple and somewhat abstract. I kept the typography and decorations in black-and-white, with the only color coming from photos. I kept the typography to two fonts, one serif (Bodoni) and one sans serif (Frutiger). </p>
