--- a/graphic.html
+++ b/graphic.html
@@ -44,6 +44,13 @@
 
     <main>
         <section class="proj">
+            <a href="banners.html">
+                <img src="images/bann.png" alt="banners" class="imgs">
+                <p class="imgTitle">banners</p>
+            </a>
+        </section>
+
+        <section class="proj">
             <a href="gs.html">
                 <img src="images/gs.png" alt="graphic standard" class="imgs">
                 <p class="imgTitle">graphic standard</p>
