--- a/illust.html
+++ b/illust.html
@@ -44,9 +44,23 @@
 
     <main>
         <section class="proj">
-            <a href="sumref.html">
-                <img src="images/sum.png" alt="summon" class="imgs">
-                <p class="imgTitle">character study</p>
+            <a href="wanderer.html">
+                <img src="images/wander.png" alt="wanderer" class="imgs">
+                <p class="imgTitle">the wanderer</p>
+            </a>
+        </section>
+
+        <section class="proj">
+            <a href="charConcept.html">
+                <img src="images/nefret.png" alt="nefret" class="imgs">
+                <p class="imgTitle">nefret concept</p>
+            </a>
+        </section>
+
+        <section class="proj">
+            <a href="vtube.html">
+                <img src="images/thessVT.png" alt="vtuber thessal" class="imgs">
+                <p class="imgTitle">vtuber models</p>
             </a>
         </section>
 
@@ -54,6 +68,13 @@
             <a href="shatts.html">
                 <img src="images/shatts.png" alt="shatts" class="imgs">
                 <p class="imgTitle">shatters icon</p>
+            </a>
+        </section>
+
+        <section class="proj">
+            <a href="sumref.html">
+                <img src="images/sum.png" alt="summon" class="imgs">
+                <p class="imgTitle">character study</p>
             </a>
         </section>
 
