--- a/index.html
+++ b/index.html
@@ -34,29 +34,11 @@
 
         <!-- menu -->
         <nav id="nav">
-            <ul>
-                <li><a href="index.html">home</a></li>
-                <li><a href="about.html">about</a></li>
-                <li><a href="contact.html">contact</a></li>
-            </ul>
+            
         </nav>
     </header>
 
     <main>
-        <section class="proj">
-            <a href="graphic.html">
-                <img src="images/gs.png" alt="graphic standard" class="imgs">
-                <p id="gsTitle" class="imgTitle">graphic design</p>
-            </a>
-        </section>
-
-        <section class="proj">
-            <a href="interact.html">
-                <img src="images/tea.png" alt="tea" class="imgs">
-                <p class="imgTitle">interactive media</p>
-            </a>
-        </section>
-
         <section class="proj">
             <a href="fashion.html">
                 <img src="images/fashion.png" alt="fashion des" class="imgs">
@@ -68,6 +50,20 @@
             <a href="illust.html">
                 <img src="images/winter.png" alt="winter" class="imgs">
                 <p class="imgTitle">illustrations</p>
+            </a>
+        </section>
+
+        <section class="proj">
+            <a href="graphic.html">
+                <img src="images/appLogo.png" alt="logo" class="imgs">
+                <p id="gsTitle" class="imgTitle">graphic design</p>
+            </a>
+        </section>
+
+        <section class="proj">
+            <a href="interact.html">
+                <img src="images/tea.png" alt="tea" class="imgs">
+                <p class="imgTitle">interactive media</p>
             </a>
         </section>
         
