--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 
     <main>
         <section class="proj">
-            <a href="fashion.html">
-                <img src="images/fashion.png" alt="fashion des" class="imgs">
-                <p class="imgTitle">fashion design</p>
+            <a href="illust.html">
+                <img src="images/wander.png" alt="illust" class="imgs">
+                <p class="imgTitle">illustrations</p>
             </a>
         </section>
 
         <section class="proj">
-            <a href="illust.html">
-                <img src="images/winter.png" alt="winter" class="imgs">
-                <p class="imgTitle">illustrations</p>
+            <a href="fashion.html">
+                <img src="images/fashion.png" alt="fashion des" class="imgs">
+                <p class="imgTitle">fashion design</p>
             </a>
         </section>
 
