--- a/anim.html
+++ b/anim.html
@@ -34,52 +34,37 @@
 
         <!-- menu -->
         <nav id="nav">
-            
+            <ul>
+                <li><a href="index.html">home</a></li>
+                <li><a href="about.html">about</a></li>
+                <li><a href="contact.html">contact</a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
+
         <section class="proj">
-            <a href="illust.html">
-                <img src="images/wander.png" alt="illust" class="imgs">
-                <p class="imgTitle">illustrations</p>
+            <a href="demo.html">
+                <img src="images/demo.png" alt="demo reel" class="imgs">
+                <p class="imgTitle">demo reel</p>
             </a>
         </section>
 
         <section class="proj">
-            <a href="graphic.html">
-                <img src="images/appLogo.png" alt="logo" class="imgs">
-                <p id="gsTitle" class="imgTitle">graphic design</p>
+            <a href="dunge.html">
+                <img src="images/iconthum.png" alt="dungeoneer" class="imgs">
+                <p class="imgTitle">dungeoneer icon</p>
             </a>
         </section>
 
         <section class="proj">
-            <a href="anim.html">
+            <a href="shatts.html">
                 <img src="images/shatts.png" alt="shatts" class="imgs">
-                <p id="gsTitle" class="imgTitle">animation</p>
+                <p class="imgTitle">shatters icon</p>
             </a>
         </section>
 
-        <section class="proj">
-            <a href="fashion.html">
-                <img src="images/fashion.png" alt="fashion des" class="imgs">
-                <p class="imgTitle">fashion design</p>
-            </a>
-        </section>
-
-        <section class="proj">
-            <a href="interact.html">
-                <img src="images/tea.png" alt="tea" class="imgs">
-                <p class="imgTitle">interactive media</p>
-            </a>
-        </section>
-        
-        <section class="proj">
-            <a href="crafts.html">
-                <img src="images/pirate.png" alt="pcave" class="imgs">
-                <p class="imgTitle">paper crafts</p>
-            </a>
-        </section>
 
     </main>
 
