--- a/illust.html
+++ b/illust.html
@@ -65,9 +65,9 @@
         </section>
 
         <section class="proj">
-            <a href="shatts.html">
-                <img src="images/shatts.png" alt="shatts" class="imgs">
-                <p class="imgTitle">shatters icon</p>
+            <a href="demonMis.html">
+                <img src="images/demonM.png" alt="demon mistress" class="imgs">
+                <p class="imgTitle">demon mistress</p>
             </a>
         </section>
 
