--- a/anim.html
+++ b/anim.html
@@ -65,6 +65,13 @@
             </a>
         </section>
 
+        <section class="proj">
+            <a href="mogra.html">
+                <img src="images/farm.png" alt="farming vid" class="imgs">
+                <p class="imgTitle">factory farming video</p>
+            </a>
+        </section>
+
 
     </main>
 
