--- a/index.html
+++ b/index.html
@@ -61,16 +61,23 @@
         </section>
 
         <section class="proj">
-            <a href="fashion.html">
-                <img src="images/fashion.png" alt="fashion des" class="imgs">
-                <p class="imgTitle">fashion design</p>
+            <a href="interact.html">
+                <img src="images/tea.png" alt="tea" class="imgs">
+                <p class="imgTitle">interactive media</p>
             </a>
         </section>
 
         <section class="proj">
-            <a href="interact.html">
-                <img src="images/tea.png" alt="tea" class="imgs">
-                <p class="imgTitle">interactive media</p>
+            <a href="maya.html">
+                <img src="images/robot/robo.jpg" alt="robot" class="imgs">
+                <p class="imgTitle">3d modeling</p>
+            </a>
+        </section>
+
+        <section class="proj">
+            <a href="fashion.html">
+                <img src="images/fashion.png" alt="fashion des" class="imgs">
+                <p class="imgTitle">fashion design</p>
             </a>
         </section>
         
