--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         <div class="descDiv">
             <p class="desc">I graduated from UC Davis 2021 with a degree in Design + minor in Computer Science. With a passion for anything design and illustration related, I'm looking for an opportunity to further challenge my skills.</p>
 
-            <p class="desc">As seen in this site, I have a basic knowledge of HTML/CSS/JS. It's been a little, but in terms of programming I have learned a bit in Python and C++. I primarily use Adobe Photoshop for illustrations, but have also done design work in Illustrator and InDesign. I have also done a handful of video projects with Premier, After Effects, and Animate. Additionally, I've done some 3D modeling projects with Autodesk</p>
+            <p class="desc">As seen in this site, I have a basic knowledge of HTML/CSS/JS. It's been a little, but in terms of programming I have learned a bit in Python and C++. I primarily use Adobe Photoshop for illustrations, but have also done design work in Illustrator and InDesign. I have also done a handful of video projects with Premier, After Effects, and Animate. Additionally, I've done some 3D modeling projects with Autodesk.</p>
 
             <p class="desc">Hobbies include video games, crafting (of paper and crochet), and tea. My go to is unsweetened oolong tea (less ice).</p>
         </div>
